--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="🔥Like🔥id1939">
-<meta property="og:description" content="💥Super💥VN">
-<meta property="og:image" content="https://img2.akspic.ru/crops/1/9/8/7/6/167891/167891-legkovyye_avtomobili-koleso-shina-avtomobilnoe_osveshhenie-svet-1920x1080.jpg">
+<meta property="og:title" content="Công cụ tuyệt vời để mở rộng dương vật!">
+<meta property="og:description" content="Cách đã được chứng minh">
+<meta property="og:image" content="https://i.imgur.com/vSdfmj3.jpg">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
